# ATNLP-Fine-tuning-with-Adapters

./: .gitignore  README.md  SCANDataLoader.ipynb  dataset.py  pyproject.toml  train.py  transformer.py
experiments/: t5_train_exp_1.py  t5_train_exp_1_32.py  t5_train_exp_1_64.py  t5_train_exp_2.py  t5_train_exp_3.py  train_exp_1.py  train_exp_2.py  train_exp_3.py
model/: t5_transformer.py  transformer.py  try.py
notebooks/: atnlp_transformer_question.ipynb
utils/: utils.py
venv-nicole/: pyvenv.cfg
