[tool.poetry]
name = "atnlp-transformer"
version = "0.1.0"
description = "reimplementation of experiments from the paper Generalization wit"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"
torch = "^2.5.1"
torchmetrics = "^1.6.0"
tqdm = "^4.67.1"
ruff = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
